--- a/instazz/package.json
+++ b/instazz/package.json
@@ -6,6 +6,7 @@
     "@material-ui/core": "^3.6.2",
     "@material-ui/icons": "^3.0.2",
     "axios": "^0.18.0",
+    "popups": "^1.1.3",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-file-reader": "^1.1.4",
